k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: configuracao
  namespace: configuracao
  labels:
    product: acordo
