k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configurations-bff
  namespace: configuracao
spec:
  selector:
    matchLabels:
      name: configurations-bff
  template:
    metadata:
      labels:
        name: configurations-bff
    spec:
      containers:
        - name: autenticacao-autorizacao-sidecar
          image: 247761945410.dkr.ecr.sa-east-1.amazonaws.com/justto/autenticacao-autorizacao-service:latest
          resources:
            limits:
              cpu: "0.5"
              memory: "256Mi"
            requests:
              cpu: "0.002"
              memory: "64Mi"
          ports:
            - name: http
              containerPort: 8081
          readinessProbe:
            initialDelaySeconds: 1
            failureThreshold: 6
            httpGet:
              path: /api/healthcheck
              port: 8081
          livenessProbe:
            initialDelaySeconds: 10
            failureThreshold: 6
            httpGet:
              path: /api/healthcheck
              port: 8081
        - name: configurations-bff
          image: 247761945410.dkr.ecr.sa-east-1.amazonaws.com/justto/configurations-bff
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "1"
              memory: "256Mi"
            requests:
              cpu: "0.4"
              memory: "64Mi"
          ports:
            - name: http
              containerPort: 3001
          readinessProbe:
            initialDelaySeconds: 1
            failureThreshold: 10
            httpGet:
              path: /api/configurations-bff/v1/healthcheck
              port: 3001
          livenessProbe:
            initialDelaySeconds: 10
            failureThreshold: 6
            httpGet:
              path: /api/configurations-bff/v1/healthcheck
              port: 3001
